# paddlepaddle-new

./: !  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  =0.15  CMakeLists.txt  CONTRIBUTING.md  CUDA_DIR  Dockerfile  README.md  README_cn.md  _typos.toml  a.diff  base_grouped.h  build.sh  gushiwei  setup.py  test.py  test_llama.py
.github/: CODEOWNERS  codecov.yml
0_size/: center_x.pdparams  center_y.pdparams  gt_labels_3d.pdparams  mask.pdparams  my.pdparams  test1.py  test2.py  valid_mask.pdparams
ci/: check_approval.sh  check_docker_image.sh  config_cfs.sh  coverage_build_size_approval.sh  coverage_check_added_ut.sh  coverage_info.sh  coverage_test.sh  determine_sot_ci_trigger.sh  kunlun_test.sh  run_linux_cpu_test.sh  run_setup.sh  run_sot_test.sh  third_party_tag.sh  utils.sh
cmake/: cinn.cmake  cuda.cmake  flagcx.cmake  hip.cmake  inference_lib.cmake  openvino.cmake  operators.cmake  rccl.cmake  simd.cmake  third_party.cmake  ucc.cmake
paddle/: CMakeLists.txt  api.yaml  extension.h
paddle/fluid/distributed/collective/deep_ep/kernels/: CMakeLists.txt  api.cuh  buffer.cuh  configs.cuh  exception.cuh  ibgda_device.cuh  internode.cu  internode_ll.cu  intranode.cu  launch.cuh  runtime.cu  utils.cuh
python/: env_dict.py.in  requirements.txt  setup.py.in  setup_cinn.py.in  test_case_1.py  test_case_2.py
test/: CMakeLists.txt  test_allclose.py
tools/: CheckPRTemplate.py  check_api_approvals.sh  check_file_diff_approvals.sh  dev_pr_diff_api.spec  gen_pybind11_stub.py  gen_ut_cmakelists.py  get_quick_disable_lt.py  get_single_test_cov.py  (+3 more)
(+3884 files in other folders)
